--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="https://github.com/P1nkH47">Github</a> | <a href="https://app.hackthebox.com/profile/628917">HTB profile</a> | <a href="#">THM profile</a>
         ___________________________________________________________________________________________________________________
 
-        I  $ apt-get a life
+           $ apt-get a life
 
            Hi there, I'm P1nkH4t! I'm glad you found my page! Please feel free to check out the links above.
 
