--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <title>P1nkH4t</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="P1nkH4t :)" />
+	<meta name="description" content="emily00xp :)" />
 	<meta name="keywords" content="#" />
-	<meta name="author" content="P1nkH4t" />
+	<meta name="author" content="emily00xp" />
     <style>
      body {
         font-family: 'Brush Script MT', cursive;
@@ -31,7 +31,7 @@
   </head>
   <body style="background-color:black">
     <br>
-    <img src="https://i.imgur.com/d7PoNfl.png" alt="p1nkh4t" style="width:180px ; height:130px" class="center" />
+    <img src="#" alt="emily00xp" style="width:180px ; height:130px" class="center" />
     <pre style="color:white">
 
     <center><div>
@@ -39,12 +39,12 @@
 
         >>>>>>>>>> Welcome to my github page (: <<<<<<<<<<
 
-        <a href="https://github.com/P1nkH47">Github</a> | <a href="https://app.hackthebox.com/profile/628917">HTB profile</a> | <a href="#">THM profile</a>
+        <a href="https://github.com/emily00xp">Github</a> | <a href="https://app.hackthebox.com/profile/628917">HTB profile</a> | <a href="#">THM profile</a>
         ___________________________________________________________________________________________________________________
 
            $ apt-get a life
 
-           Hi there, I'm P1nkH4t! I'm glad you found my page! Please feel free to check out the links above.
+           Hi there, I'm emily00xp! I'm glad you found my page! Please feel free to check out the links above.
 
            I hope you're able to find something useful, specially if you're a n00bie such as myself.
            And remember, this path is not meant to be an easy one. If you feel like you're not gonna be able to do it, take a deep breath, take a break,
@@ -61,7 +61,7 @@
 
 
 
-        P1nkH4t©
+        emily00xp©
         </pre>
 
 
