--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="eng">
   <head>
-    <title>P1nkH4t</title>
+    <title>Emilyn</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="emily00xp :)" />
 	<meta name="keywords" content="#" />
