--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="eng">
   <head>
-    <title>Emilyn</title>
+    <title>hi</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="emily00xp :)" />
 	<meta name="keywords" content="#" />
@@ -18,10 +18,10 @@
         width: 50%;
       }
       a:link{
-        color: hotpink;
+        color: blue;
       }
       a:visited{
-        color: hotpink;
+        color: blue;
       }
       a:hover{
         color: rgb(2, 218, 9);
@@ -39,7 +39,7 @@
 
         >>>>>>>>>> Welcome to my github page (: <<<<<<<<<<
 
-        <a href="https://github.com/emily00xp">Github</a> | <a href="https://app.hackthebox.com/profile/628917">HTB profile</a> | <a href="#">THM profile</a>
+        <a href="https://github.com/emily00xp">Github</a> | <a href="https://app.hackthebox.com/profile/628917">HTB profile</a>
         ___________________________________________________________________________________________________________________
 
            $ apt-get a life
